[package]
name = "signature_extractor"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
rstest = "0.26"
async-nats = "0.34"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

[dependencies]
extractous = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
base64 = "0.22"
tempfile = "3.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
